<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bob\'s Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message_prompt">Welcome!</string>
    <string name="welcome_login_button_hint">Log In</string>
    <string name="welcome_register_button_hint">Register</string>

    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_name">Login</string>
    
    <string name="title_activity_registration">Register</string>
    <string name="registration_username_hint">Username</string>
    <string name="registration_firstName_hint">First Name</string>
    <string name="registration_lastName_hint">Last Name</string>
    <string name="registration_password_hint">Password</string>
    <string name="registration_confirmation_hint">Confirm Password</string>
    <string name="registration_email_hint">Email Address</string>
    <string name="registration_register_button_text">Register!</string>
    
    <string name="title_activity_user_account">User Account</string>
    <string name="user_account_welcome_message">Welcome</string>
    <string name="user_account_user_name_prompt">Username:</string>
    <string name="user_account_first_name_prompt">First Name:</string>
    <string name="user_account_last_name_prompt">Last Name:</string>
    <string name="user_account_email_prompt">E-Mail:</string>
    <string name="user_account_finance_account_create_button">Create Account</string>
    <string name="user_account_finance_account_create_dialog_box">Make An Account</string>
    <string name="user_account_alert_dialog_account_create_hint">account name</string>
    <string name="user_account_alert_dialog_interest_rate_hint">interest rate (%)</string>
    <string name="title_activity_user_finance_account">UserFinanceAccountActivity</string>
    <string name="user_finance_account_activity_account_name">Account Name: </string>
    <string name="user_finance_account_activity_account_balance">Account Balance: </string>
    <string name="user_account_alert_dialog_transaction_hint">amount</string>
    <string name="user_account_finance_transaction_create_button">Add Transaction</string>
    <string name="user_account_finance_transaction_create_dialog_box">Transaction</string>
    <string name="user_finance_account_activity_balance_amount"></string>
    
    <string name="title_activity_report">Report</string>
    <string name="create_report">Create Report</string>
    <string name="report_type_prompt">Select a Report Type</string>
    <string-array name="report_types">
        <item>Spending Category Report</item>
    </string-array>
    <string name="date_picker_start_date_title">Pick a Start Date for the Report:</string>
    <string name="date_picker_end_date_title">Pick a End Date for the Report:</string>
    <string name="cancel">Cancel</string>
    
    <string-array name="deposit_categories">
        <item>Salary</item>
        <item>Birthday</item>
        <item>Parents</item>
        <item>Scholarship</item>
    </string-array>
    <string-array name="withdrawal_categories">
        <item>Food</item>
        <item>Rent</item>
        <item>Entertainment</item>
        <item>Clothing</item>
    </string-array>
</resources>
