<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity" >

    <EditText
        android:id="@+id/userNameRegistrationEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/registration_username_hint" />
    
    <EditText
        android:id="@+id/firstNameRegistrationEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameRegistrationEditText"
        android:inputType="textCapWords"
        android:hint="@string/registration_firstName_hint" />
    
    <EditText
        android:id="@+id/lastNameRegistrationEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameRegistrationEditText"
        android:inputType="textCapWords"
        android:hint="@string/registration_lastName_hint" />
    
    <EditText
        android:id="@+id/passwordRegistrationEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameRegistrationEditText" 
        android:inputType="textPassword"
        android:hint="@string/registration_password_hint"/>
    
    <EditText
        android:id="@+id/emailRegistrationEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordRegistrationEditText" 
        android:inputType="textEmailAddress"
        android:hint="@string/registration_email_hint" />
    
    <Button
        android:id="@+id/registerButtonRegistrationActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailRegistrationEditText"
        android:text="@string/registration_register_button_text" />
    
</RelativeLayout>
