<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserAccountActivityView" >

    <TextView
        android:id="@+id/userAccountWelcomeMessage"
        android:textSize="25sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_account_welcome_message"
        android:gravity="center" />
    
    <TextView
        android:id="@+id/userAccountUserNamePrompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userAccountWelcomeMessage"
        android:text="@string/user_account_user_name_prompt" />
    
    <TextView
        android:id="@+id/userAccountFirstNamePrompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userAccountUserNamePrompt"
        android:text="@string/user_account_first_name_prompt" />
    
    <TextView 
        android:id="@+id/userAccountLastNamePrompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userAccountFirstNamePrompt"
        android:text="@string/user_account_last_name_prompt" />
    
    <TextView
        android:id="@+id/userAccountEMailPrompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userAccountLastNamePrompt"
        android:text="@string/user_account_email_prompt" />

    <Button
        android:id="@+id/userAccountFinanceAccountCreateButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userAccountEMailPrompt"
        android:layout_below="@+id/userAccountEMailPrompt"
        android:onClick="onClick"
        android:text="@string/user_account_finance_account_create_button" />
    
    <ListView 
        android:id="@+id/userFinanceAccountList"
        android:layout_below="@id/userAccountFinanceAccountCreateButton"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent" />
    
</RelativeLayout>
