<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserFinanceAccountActivity" >

    <TextView
        android:id="@+id/userFinanceAccountActivityAccountNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_finance_account_activity_account_name" />
    
    <TextView
        android:id="@+id/userFinanceAccountActivityAccountBalanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userFinanceAccountActivityAccountNameTextView"
        android:text="@string/user_finance_account_activity_account_balance" />
    
    <TextView
        android:id="@+id/userFinanceAccountActivityBalanceValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/userFinanceAccountActivityAccountBalanceTextView"
        android:layout_below="@id/userFinanceAccountActivityAccountNameTextView" 
        android:text="@string/user_finance_account_activity_balance_amount" />
        
    <Button
        android:id="@+id/userFinanceAccountTransactionCreateButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userFinanceAccountActivityAccountBalanceTextView"
        android:layout_below="@+id/userFinanceAccountActivityAccountBalanceTextView"
        android:onClick="onClick"
        android:text="@string/user_account_finance_transaction_create_button" />
    
	<ListView 
	        android:id="@+id/userTransactionAccountList"
	        android:layout_below="@id/userFinanceAccountTransactionCreateButton"
	        android:layout_height="fill_parent"
	        android:layout_width="fill_parent" />

</RelativeLayout>
