<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

  	<EditText
        android:id="@+id/userNameLoginEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" 
        android:inputType="text"
        android:hint="@string/login_username_hint" />

    <EditText
        android:id="@+id/passwordLoginEditTet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameLoginEditText"
        android:inputType="textPassword" 
        android:hint="@string/login_password_hint"/>

    <Button
        android:id="@+id/loginButtonLoginActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLoginEditTet"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button_name"
        android:onClick="handleUserLogin" />

</RelativeLayout>
